--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/vim-webostv-dev"]
 	path = bundle/vim-webostv-dev
 	url = https://github.com/cerberus-tools/vim-webostv-dev.git
+[submodule "bundle/vim-gutentags"]
+	path = bundle/vim-gutentags
+	url = https://github.com/ludovicchabant/vim-gutentags.git
